<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
        <!-- Email Address or Phone Number -->
        <EditText
            android:id="@+id/email_or_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email_address_or_phone_number"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1.0"
            tools:ignore="TextFields" />

        <!-- Password -->
        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/email_or_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1.0"/>

        <!-- Log in Button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1.0"/>

        <!-- Forgotten Password -->
        <TextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotten_password"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

        <!-- Create New Account Button -->
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:backgroundTint="@android:color/holo_green_light"
            android:textColor="@android:color/white"
            android:background="@drawable/button_design"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintWidth_percent="1.0"/>

        <TextView
            android:id="@+id/meta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pacifico"
            android:text="@string/meta"
            android:textSize="30sp"
            android:layout_marginTop="300dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            />

        <ImageView
            android:layout_width="55dp"
            android:layout_height="81dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/meta"
            app:layout_constraintTop_toBottomOf="@+id/btn_create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="290dp"
            app:layout_constraintHorizontal_bias="0.3"

            />

</androidx.constraintlayout.widget.ConstraintLayout>
